2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/timer.c:
	* test/Makefile.am:
	* TODO:
	* src/glib.h:
	* src/gtimer.c:
	* src/Makefile.am: implemented GTimer.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/Makefile.am:
	* test/spawn.c:
	* src/gspawn.c:
	* src/glib.h:
	* src/Makefile.am: initial implentation of g_spawn_command_line_sync.
	Still need better error handling, but works for the most part.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/garray.c: grow faster so that the 'big' test does not crawl.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/shell.c:
	* src/gqueue.c: plugged leaks.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/path.c:
	* src/gpath.c: when PATH is not defined, the current dir is used.
	See execvp(3).

2006-08-25  Alp Toker  <alp@atoker.com>

	* src/gstr.c: g_strv_length() should return guint, not gint
	* src/glib.h: Add g_strv_length() prototype
	
2006-08-24  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c (g_get_home_dir, g_get_tmp_dir, g_get_user_name,
	g_get_prgname, g_set_prgname): implemented.

	* test/ Fix leaks.
	
	* src/gpath.c (g_get_current_dir): Implement.

	(g_find_program_in_path, g_path_is_absolute): implement.
	
	Add g_path_get_dirname, g_path_get_basename

	* src/gpath.c: Path routines

2006-08-23  Miguel de Icaza  <miguel@novell.com>

	* src/gerror.c: Implement. 

	* src/glist.c (g_list_sort): Remove routine instead of hoping that
	it wont crash when we run it.

2006-08-23  Raja R Harinath  <rharinath@novell.com>

	* src/glist.c (g_list_insert_before): Avoid non-head declaration.

	* test/slist.c (test_slist_insert_before): Add.
	* src/gslist.c (g_slist_insert_before): Append if 'sibling' is null.

	* test/list.c (test_list_insert_before): Add test for return value
	of g_list_insert_before.
	* test/Makefile.am (test_eglib_LDADD): Refer to the .la file so as
	to rebuild test if eglib changes.